tests/NormalTests/paczka1/small_fuzzy/94834366.err
Error in line 4: cmq S261 29,9
Error in line 5: cmq A228 49,6
